Fix navigation on mobile.

--- a/resources/assets/sass/master.scss
+++ b/resources/assets/sass/master.scss
@@ -15,6 +15,10 @@ body {
     flex-direction: column;
 }
 
+header {
+  z-index: 1000;
+}
+
 main {
     flex: 1 0 auto;
 }
